# wolo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  FINAL_COMPLETION_REPORT.md  GLM_CONCEPT_REMOVAL.md  LICENSE  MIGRATION_SUCCESS_REPORT.md  MINIMAL_MODE_IMPROVEMENTS.md  Makefile  README.md  WOLO_LEXILUX_MIGRATION_PLAN.md  check-wolo-version.sh  config.example.yaml  install.sh  pyproject.toml  requirements.txt  wolo-dev
.github/workflows/: ci.yml  release.yml  security.yml
docs/: CLI_REDESIGN_SPEC.md  COMPACTION_DEVELOPMENT_SPEC.md  CONFIGURATION.md  CONFIG_ARCHITECTURE.md  CONTEXT_STATE.md  HISTORY_COMPACTION_COMPARISON.md  HISTORY_COMPACTION_OPTIMIZATION_PLAN.md  INSTALLATION.md  LLM_MESSAGE_STRUCTURE.md  PATH_SAFETY.md  SECURITY.md  SESSION_COMPACTION_ARCHITECTURE.md  claude_compatibility_report.md  i02-a02-implementation-summary.md  mcp_plugin_design.md  skill_tool_and_http_mcp_plan.md  tool_comparison_report.md
docs/plans/: 2026-02-04-pathguard-implementation-plan.md  2026-02-05-pathguard-modular-refactor.md  2026-02-06-i02-concurrent-safety-and-error-handling.md  2026-02-06-i02-concurrent-safety-implementation.md  2026-02-06-pathguard-hardening-plan.md
docs/reviews/: A01.md  A02.md
docs/verifications/: v01.md
examples/: lexilux_migration_demo.py
homebrew/: wolo.rb
migration_tests/: README.md  test_edge_cases.py  test_error_handling.py  test_error_handling_quick.py  test_lexilux_real.py  test_mcp_integration.py  test_multi_endpoints.py  test_performance_benchmark.py  test_reasoning_mode.py  test_stability.py  test_tool_calling.py
mytest/: .gitignore  crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
mytest/crm-backend/: README.md  requirements.txt
mytest/crm_app/: .gitignore  config.py  database.py  requirements.txt
mytest/crm_backend/: PROJECT_SUMMARY.md  README.md  __init__.py  app.py  config.py  database.py  demo.py  requirements.txt  run_tests.py  start.sh
mytest/simple_crm/: database.py
scripts/: INSTALLATION_DESIGN.md  README.md  generate_release_notes.py  install.ps1  install.py  install.sh  screenshot_163.py  test_release_notes.sh
tests/: conftest.py
tests/compaction/: __init__.py  test_config.py  test_history_detailed.py  test_manager_integration.py  test_policies.py  test_pruning_policy_detailed.py  test_summary_policy_detailed.py  test_token.py
tests/e2e/: README.md  __init__.py  test_e2e_session_continuity.py  test_e2e_solo_tasks.py
tests/integration/: __init__.py  test_concurrent_sessions.py
tests/path_safety/: test_checker.py  test_cli_integration.py  test_cli_interaction.py  test_cli_path_guard_helper.py  test_cli_strategy.py  test_cli_strategy_limits_audit.py  test_config.py  test_config_integration.py  test_config_schema.py  test_denial_status_semantics.py  test_exceptions.py  test_executor_multiedit_guard.py  test_middleware.py  test_path_guard.py  test_persistence.py  test_session_persistence.py  test_strategy.py  test_tool_integration.py
tests/unit/: README_CLI_COMPREHENSIVE.md  __init__.py  benchmark.py  test_adversarial_edge_cases.py  test_agent_doom_loop_context_state.py  test_agents.py  test_bugfix_round2.py  test_cli_allow_path.py  test_cli_base.py  test_cli_commands.py  test_cli_comprehensive.py  test_cli_exception_handling.py  test_cli_execution.py  test_cli_help.py  test_cli_router.py  test_config_baseurl.py  test_config_env_priority.py  test_config_init.py  test_context_state.py  test_control.py  test_errors.py  test_events.py  test_exceptions.py  test_llm_adapter.py  test_llm_adapter_context_state.py  test_mcp_cache.py  test_memory.py  test_modes.py  test_question.py  test_run_solo_wild_behavior.py  test_session.py  test_session_context_state.py  test_session_improvements.py  test_session_persistence.py  test_shell_risk_guard.py  test_smart_replace.py  test_tool_registry.py  test_tools_exceptions.py  test_tools_integration.py  test_ui_registration.py  (+1 more)
wolo/: __init__.py  __main__.py  agent.py  agent_names.py  agents.py  config.py  config_schema.py  control.py  errors.py  events.py  exceptions.py  file_time.py  llm.py  llm_adapter.py  mcp.py  mcp_integration.py  metrics.py  modes.py  path_guard.py  path_guard_exceptions.py  plan_mode.py  question.py  question_ui.py  session.py  skill_tool.py  smart_replace.py  subprocess_manager.py  terminal.py  tool_registry.py  tools.py  truncate.py  ui.py  watch_server.py
wolo/claude/: __init__.py  config.py  mcp_config.py  skill_loader.py
(+154 files in other folders)
