[project]
name = "wolo"
version = "0.1.0"
description = "Minimal Python AI Agent Clone"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.43",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "mcp>=1.0.0",
    "httpx[socks]>=0.28.1",
    "psutil>=5.9.0",
]

[project.scripts]
wolo = "wolo.cli:main_async"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
