[project]
name = "mbos-wolo"
version = "0.1.0"
description = "Minimal Python AI Agent Clone"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.43",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "mcp>=1.0.0",
    "httpx[socks]>=0.28.1",
    "psutil>=5.9.0",
]

[project.scripts]
wolo = "wolo.cli:main_async"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wolo"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "wolo/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -n auto"
