[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbos-wolo"
dynamic = ["version"]
description = "Minimal Python AI Agent Clone"
readme = "README.md"
requires-python = ">=3.10,<3.16"
license = "Apache-2.0"
authors = [
    {name = "Wolo Team"}
]
keywords = ["ai", "agent", "mcp", "llm", "glm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0.43",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "mcp>=1.0.0",
    "httpx[socks]>=0.28.1",
    "psutil>=5.9.0",
    "exceptiongroup>=1.0.0; python_version < '3.11'",
    # ✅ NEW: lexilux for LLM client (local path dependency)  
    "lexilux @ file:///home/percy/works/mygithub/mbos-agent/lexilux",
]

[project.scripts]
wolo = "wolo.cli:main_async"

[project.urls]
Homepage = "https://github.com/mbos-agent/wolo"
Repository = "https://github.com/mbos-agent/wolo"
Issues = "https://github.com/mbos-agent/wolo/issues"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "wolo/tests*",
]

[tool.setuptools.dynamic]
version = {attr = "wolo.__version__"}

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "wolo/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short -n auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["wolo"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 60  # Minimum 60% coverage required
